[package]
name = "axdriver_block"
edition = "2021"
description = "Common traits and types for block storage drivers"
documentation = "https://arceos-org.github.io/axdriver_crates/axdriver_block"
keywords = ["arceos", "driver", "blk"]
version.workspace = true
authors.workspace = true
license.workspace = true
homepage.workspace = true
repository.workspace = true
categories.workspace = true

[features]
ramdisk = []
bcm2835-sdhci = ["dep:bcm2835-sdhci"]
rk3568-emmc = ["dep:sdmmc"]
default = []

[dependencies]
log = "0.4"
axdriver_base = { workspace = true }
bcm2835-sdhci = { git = "https://github.com/lhw2002426/bcm2835-sdhci.git", rev = "e974f16", optional = true }
sdmmc = { git = "https://github.com/YanQD/sdmmc.git", branch = "no_init", default-features = false, features = ["pio"], optional = true }